# mlops_project_fiftysix

./: .gitignore  README.md  README_cookie.md  pyproject.toml  requirements.txt  requirements_dev.txt  tasks.py
.github/workflows/: pre_commit.yaml  tests.yaml
configs/: config.yaml  config_cpu.yaml
dockerfiles/: api.dockerfile  cloudbuild.yaml  train.dockerfile
docs/: mkdocs.yaml
mlops_project_fiftysix/dockerfiles/: train.dockerfile
mlops_project_fiftysix/docs/: README.md
mlops_project_fiftysix/docs/source/: index.md
models/: model.pth
outputs/2025-01-16/10-58-07/.hydra/: hydra.yaml
outputs/2025-01-16/10-58-37/.hydra/: config.yaml  hydra.yaml
reports/: README.md  checkliste.md  checkliste_and_questions.md  report.html
reports/figures/: mlops_pipeline.bpmn
src/project/: api.py  data.py  evaluate.py  model.py  predict.py  train.py
tests/: test_data.py  test_model.py
tests/integrationtests/: test_apis.py
